# coursework

Coursework/: Coursework.sln
Coursework/Coursework/: CMakeLists.txt  Chessbot.cpp  Chessbot.h  Coursework.vcxproj  Coursework.vcxproj.filters  Game.cpp  Game.h  Module.cpp  Pieces.cpp  Pieces.h
Coursework/Coursework/x64/Debug/: Coursework C++.exe.recipe  Coursework C++.ilk  Coursework.exe.recipe  Coursework.ilk  chess_module.exe.recipe  cppmodule.exe.recipe  vc143.idb
Coursework/Coursework/x64/Debug/Coursework C++.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Coursework C++.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Coursework/Coursework/x64/Debug/Coursework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Coursework/Coursework/x64/Debug/chess_module.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Coursework/Coursework/x64/Debug/cppmodule.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Coursework/Coursework/x64/Release/: cppmodule.exe.recipe  cppmodule.ipdb
Coursework/Coursework/x64/Release/cppmodule.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  cppmodule.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
(+7 files in other folders)
